# fab-classic

./: .buildinfo  .gitignore  .travis.yml  MANIFEST.in  README.md  README.rst  dev-requirements.txt  doc-requirements.txt  fabfile.py  faq.html  genindex.html  index.html  installing.html  objects.inv  old_changelog.html  py-modindex.html  requirements.txt  running_tests.html  search.html  searchindex.js  setup.cfg  setup.py  troubleshooting.html  tutorial.html
.doctrees/: environment.pickle  faq.doctree  index.doctree  installing.doctree  old_changelog.doctree  running_tests.doctree  troubleshooting.doctree  tutorial.doctree
.doctrees/usage/: env.doctree  execution.doctree  fab.doctree  fabfiles.doctree  interactivity.doctree  library.doctree  output_controls.doctree  parallel.doctree  ssh.doctree  tasks.doctree
.github/workflows/: linux.yml
_sources/: index.rst.txt  installing.rst.txt  old_changelog.rst.txt  tutorial.rst.txt
_sources/usage/: env.rst.txt  execution.rst.txt
_static/: alabaster.css
api/contrib/: console.html  django.html  files.html  project.html
api/core/: colors.html  context_managers.html  decorators.html  docs.html  network.html  operations.html  tasks.html  utils.html
fabric/: api.py  colors.py  context_managers.py  decorators.py  docs.py  io.py  job_queue.py  main.py  network.py  operations.py  sftp.py  state.py  task_utils.py  tasks.py  thread_handling.py  utils.py  version.py
fabric/contrib/: django.py  files.py  project.py
integration/: test_contrib.py  test_operations.py
sites/: shared_conf.py
tests/: Python26SocketServer.py  client.key  client.key.pub  fake_filesystem.py  mock_streams.py  server.py  test_context_managers.py  test_contrib.py  test_decorators.py  test_main.py  test_network.py  test_operations.py  test_parallel.py  test_project.py  test_tasks.py  test_utils.py  utils.py
usage/: env.html  execution.html  fab.html  fabfiles.html  interactivity.html  library.html  output_controls.html  parallel.html  ssh.html  tasks.html
(+25 files in other folders)
