[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE

[flake8]
exclude = tests/support,tests/Python26SocketServer.py,sites,fabric/api.py
max-line-length = 164
ignore =
    # continuation line under-indented for hanging indent
    E121,
    # continuation line missing indentation or outdented
    E122,
    # closing bracket does not match indentation of opening bracket's line
    E123
    # closing bracket does not match visual indentation
    E124,
    # continuation line with same indent as next logical line
    E125,
    # continuation line over-indented for hanging indent
    E126,
    # continuation line over-indented for visual indent
    E127,
    # continuation line under-indented for visual indent
    E128,
    # multiple spaces before operator
    E221,
    # missing whitespace after ':'
    E231,
    # at least two spaces before inline comment
    E261,
    # block comment should start with '# '
    E265,
    # too many leading '#' for block comment
    E266,
    # expected 2 blank lines, found 1
    E302,
    # expected 1 blank line before a nested definition, found 0
    E306,
    # line break before binary operator
    W503,
    # multiple statements on one line
    E704,
    # do not assign a lambda expression, use a def
    E731,

