[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE

[flake8]
exclude = tests/support,tests/Python26SocketServer.py,sites,fabric/api.py
max-line-length = 128
ignore =
    # closing bracket does not match visual indentation
    E124,
    # continuation line with same indent as next logical line
    E125,
    # continuation line under-indented for visual indent
    E128,
    # at least two spaces before inline comment
    E261,
    # expected 2 blank lines, found 1
    E302,
    # expected 1 blank line before a nested definition, found 0
    E306,
    # line break before binary operator
    W503,

